# cli

./: .gitignore  .gitmodules  LICENSE  README.md  config.ini.sample  pyproject.toml
.github/workflows/: pythonpackage.yml
pyazo_cli/: pyazo.py
src/pyazo_cli/: __init__.py
