[tool.poetry]
name = "pyazo_cli"
version = "0.2.0"
description = ""
authors = ["Jelena Dokic <jrubics@hacke.rs>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://github.com/pyazo-screenshot/cli"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
pyperclip = "^1.8.0"
click = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.7.1"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pyazo = 'pyazo_cli.pyazo:main'
