[project]
name = "pyazo_cli"
version = "0.4.1"
description = ""
authors = [
    {name = "Jelena Dokic", email = "jrubics@hacke.rs"},
    {name = "TheEdgeOfRage", email = "git@theedgeofrage.com"},
]
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "pyclip>=0.7.0",
    "requests>=2.32.4",
]

[project.scripts]
pyazo = "pyazo_cli:main"

[tool.uv]
package = true

[tool.pyright]
reportUnusedCallResult = false
reportMissingTypeStubs = false
